finally fix startpage overflow

--- a/src/components/layout/StartPage.css
+++ b/src/components/layout/StartPage.css
@@ -2,6 +2,7 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(./StartPage.jpg);
   background-size: cover;
+  overflow: scroll;
 }
 
 .StartPage-header {
